2015-10-27  Bin Cheng  <bin.cheng@arm.com>

	* loop-invariant.c (struct def): New field can_prop_to_addr_uses.
	(inv_can_prop_to_addr_use): New function.
	(record_use): Call can_prop_to_addr_uses, set the new field.
	(get_inv_cost): Count cost if inv can't be propagated into its
	address uses.

2015-10-26  Doug Evans  <dje@google.com>

	* config/linux.h (INCLUDE_DEFAULTS): Add INCLUDE_DEFAULTS_MUSL_LOCAL.

2015-10-26  Eric Botcazou  <ebotcazou@adacore.com>

	* match.pd (fold_widened_comparison): Apply simplifications to all
	integral types.

2015-10-26  Simon Dardis  <simon.dardis@imgtec.com>

	* target.def (TARGET_NO_SPECULATION_IN_DELAY_SLOTS_P): New hook.
	* doc/tm.texi.in (TARGET_NO_SPECULATION_IN_DELAY_SLOTS_P): Document.
	* doc/tm.texi: Regenerated.
	* reorg.c (dbr_schedule): Use new hook.
	* config/mips/mips.c (mips_no_speculation_in_delay_slots_p): New.

2015-10-26  Jeff Law  <law@redhat.com>

	PR tree-optimization/68013
	* tree-ssa-threadbackward.c (fsm_find_control_statement_thread_paths):
	Make sure the first block in the path is in VISITED_BBs.

2015-10-26  Richard Biener  <rguenther@suse.de>
	Dominik Vogt  <vogt@linux.vnet.ibm.com>

	PR middle-end/67443
	* alias.c (ao_ref_from_mem): Remove promoted subreg handling.
	Properly prune ref->ref for accesses outside of ref.

2015-10-26  Richard Sandiford  <richard.sandiford@arm.com>

	* gimple-fold.c (replace_stmt_with_simplification): Don't allow
	new statements to be inserted if inplace.  Allow calls to have
	nonempty sequences.

2015-10-26  Richard Biener  <rguenther@suse.de>

	* tree-object-size.c: Remove builtins.h include, include tree-cfg.h.
	(do_valueize): New function.
	(pass_object_sizes::execute): Use gimple_fold_stmt_to_constant and
	replace_uses_by.
	* tree-ssa-threadedge.c: Remove builtins.h include, include
	gimple-fold.h
	(fold_assignment_stmt): Remove.
	(threadedge_valueize): New function.
	(record_temporary_equivalences_from_stmts): Use